--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <meta name="description" content=" it is our you tube channel please subscribe "> 
   <meta name="author" content="Information fact
 "> 
-  <meta name="keywords" content="Information fact,Information fact in Indian Head Park,Information fact in Illinois,Information fact in United States,Information fact in SCIENCE, TECHNOLOGY &amp; ENGINEERING
+  <meta name="keywords" content="Information fact,Information fact himachal pradesh Rajgarh ,Information fact in Illinois,Information fact in United States,Information fact in SCIENCE, TECHNOLOGY &amp; ENGINEERING
 "> 
   <meta name="csrf-token" content="IpcVq5hLcDWc4Zza3hZ9Xx980miLSmnSQdPCpUHV"> 
   <meta name="twitter:card" content="summary_large_image"> 
@@ -46,7 +46,7 @@
   <meta name="geo.position" content="41.7723527;-87.9012671"> 
   <meta name="geo.placename" content="Indian Head Park"> 
   <meta name="geo.region" content="US"> 
-  <title>Information fact in  Indian Head Park </title> 
+  <title>Information fact india  </title> 
   <!-- Favicon --> 
   <link rel="icon" href="https://informationfact.websites.co.in/img/favicon.ico?v=2131896546" type="image/x-icon"> 
   <!-- Google font --> 
@@ -233,7 +233,7 @@ var s = {
           <ion-icon name="pin" role="img" class="hydrated" aria-label="pin"></ion-icon> 
          </div> 
          <div class="contact-text"> 
-          <p> Unnamed Road, Himachal Pradesh <br> <br> Illinois United States - 173101 </p> 
+          <p> ward no 7 Road, Himachal Pradesh <br> <br>- 173101 </p> 
          </div> 
         </div> 
         <div class="contact-info-wrap"> 
@@ -307,7 +307,7 @@ var s = {
         <div class="parallax-inner" style="position: absolute; background-image: url(&quot;https://informationfact.websites.co.in/udyog/img/defaults/site_default_img.jpg&quot;); background-position: center center; background-repeat: no-repeat; background-size: cover; width: 330px; height: 940.63px; transform: translate3d(-20px, -388px, 0px); transition: transform 100ms ease 0s; z-index: -1;"></div> 
         <div class="business-card"> 
          <h1 class="b-name">Information fact</h1> 
-         <p class="b-desc">it is our you tube channel please subscribe</p> 
+         <p class="b-desc">it is our youtube channel please subscribe</p> 
          <div class="business-action-wrap text-center"> 
           <div class="business-action my-4"> 
            <a href="tel:+919816427989" class="_click_record theme-custom-button yellow-button" data-websiteid="684648" title="call +919816427989" data-type="phone"> Call Us </a> 
@@ -351,8 +351,8 @@ var s = {
         </div> 
        </div> 
        <input type="hidden" class="update-data" data-id="998468" title="Welcome to Arnav Thakur" id="update-data-998468" value="This is Arnav Thakur website created by Arnav Thakur.
-                                        Arnav Thakur falls in LOCAL BUSINESS line of business.
-                                        You can visit us offline at our office located at : Unnamed Road, Himachal Pradesh, Indian Head Park, Illinois, United States - 173101
+                                        Arnav Thakur falls in online of business.
+                                        You can visit us offline at our office located at : ward no 7 , Himachal Pradesh - 173101
                                         You can contact us by phone - 9816427989 or email us on rajeshthakur84864@gmail.com or use the Contact Form.
                                         This is your first post. Edit or delete it, then start writing!"> 
        <div class="col-md col-sm-12 px-0 "> 
@@ -360,7 +360,7 @@ var s = {
          <div class="parallax-inner" style="position: absolute; background-image: url(&quot;https://informationfact.websites.co.in/udyog/img/defaults/site_default_img.jpg&quot;); background-position: center center; background-repeat: no-repeat; background-size: cover; width: 360px; height: 978.375px; transform: translate3d(-25px, -373px, 0px); transition: transform 100ms ease 0s; z-index: -1;"></div> 
          <div class="update-content"> 
           <h3 class="mb-4"> <a title="view Welcome to Arnav Thakur" href="https://Informationfact.websites.co.in/update/pages/998468" class="utitle odd"> Welcome to Arnav Thakur </a> </h3> 
-          <p class="ucontent mb-3 odd"> This is Arnav Thakur website created by Arnav Thakur. Arnav Thakur falls in LOCAL BUSINESS line of business. You can visit us offline at our office located at : Unnamed Road, Himachal Pradesh, Indian Head Park, Illinois, United States - 173101... </p> 
+          <p class="ucontent mb-3 odd"> This is information fact website created by Arnav Thakur. Arnav Thakur falls in online BUSINESS line of business. You can visit us offline at our office located at :ward no7 Road, Himachal Pradesh,  - 173101... </p> 
           <a title="read more about Welcome to Arnav Thakur" href="https://Informationfact.websites.co.in/update/pages/998468" class="uaction odd"> Read More.. </a> 
          </div> 
          <div class="update-overlay odd"></div> 
@@ -374,13 +374,13 @@ var s = {
                 "headline": "Welcome to Arnav Thakur",
                 "image": {
                     "@type": "ImageObject",
-                    "url": "https://informationfact.websites.co.in"
+                    "url": "https://informationfact.co.in"
                 },
                 "mainEntityOfPage": {
                     "@type": "WebPage",
-                    "@id": "https://Informationfact.websites.co.in/update/pages/998468"
+                    "@id": "https://Informationfactin/update/pages/998468"
                 },
-                "description": "This is Arnav Thakur website created by Arnav Thakur.                                         Arnav Thakur falls in LOCAL BUSINESS line of business.                                         You can vis...",
+                "description": "This information fact website created by Arnav Thakur.                                         Arnav Thakur falls in LOCAL BUSINESS line of business.                                         You can vis...",
                 "datePublished": "2022-01-01 21:11:17",
                 "dateModified": "2022-01-01 21:11:17",
                 "author": {
@@ -440,10 +440,10 @@ var s = {
       <div class="footer-widget address"> 
        <h5 class="mb-5">Visit Us</h5> 
        <!-- Default Business Address--> 
-       <h6>Information fact</h6> Unnamed Road, Himachal Pradesh 
+       <h6>Information fact</h6> ward no 7, Himachal Pradesh 
        <br> 
-       <br> Indian Head Park Illinois 
-       <br> United States - 173101 
+       <br> India himachal pradesh 
+       <br>Rajgarh- 173101 
        <div class="mt-4"> 
         <a href="https://informationfact.websites.co.in/contact" title="go to contact page of Information fact" class=""> View All Branches </a> 
        </div> 
@@ -484,9 +484,7 @@ var s = {
    </div> 
   </footer> 
   <section> 
-   <div class="ui placeholder center aligned segment text-center mt-4"> 
-    <p> <strong>This site was designed with <a class="google-link" href="https://play.google.com/store/apps/details?id=in.co.websites.websitesapp" target="_blank">Websites.co.in - Website Builder </a><i class="fab fa-android"></i> </strong> </p> 
-    <a href="https://play.google.com/store/apps/details?id=in.co.websites.websitesapp&amp;hl=en" class=""> <button class="btn btn-primary"> Create Your Free Website Instantly! </button> </a> 
+   <div class="ui placeholder center aligned segment text-center m
     <p></p> 
    </div> 
   </section> 
@@ -495,7 +493,7 @@ var s = {
     <div class="row py-4"> 
      <div class="col-md col-sm-12 text-center">
        © 2022 
-      <a href="https://informationfact.websites.co.in" target="_blank" rel="noopener"> Information fact </a> 
+      <a href="https://information fact" target="_blank" rel="noopener"> Information fact </a> 
      </div> 
      <div class="col-md col-sm-12 text-center"> 
       <i class="fa fa-sitemap"></i> 
